--- a/package.json
+++ b/package.json
@@ -39,6 +39,7 @@
         "js-yaml": "^4.1.0",
         "json2csv": "6.0.0-alpha.2",
         "jsonwebtoken": "^9.0.0",
+        "jszip": "^3.10.1",
         "jwt-decode": "^3.1.2",
         "less": "^4.1.3",
         "less-loader": "^11.1.0",
